tests/agl/rejections/scope/for_range_var_escapes.agl
for i in 1 to 5 do
  ()
done
print i
